Add FormP, FormPb, and FormL so mathematical logic tex files compile

--- a/latex/homework.sty
+++ b/latex/homework.sty
@@ -18,6 +18,9 @@
 
 %Sentential and first-order logic stuff
 \newcommand{\Form}{\operatorname{Form}}
+\newcommand{\FormP}{\operatorname{Form}_{\textsc{P}}}
+\newcommand{\FormPb}{\operatorname{Form}_{\bar{\textsc{P}}}}
+\newcommand{\FormL}{\operatorname{Form}_{\L}}
 \newcommand{\Subst}{\operatorname{Subst}}
 \newcommand{\Dual}{\operatorname{Dual}}
 \newcommand{\Depth}{\operatorname{Depth}}
